hubSide/force-app/main/default/objects/Product2/fields/B_Appli_Model_Id__c.field-meta.xml
<CustomField>
    <fullName>B_Appli_Model_Id__c</fullName>
    <description>B-Appli Id of the Model</description>
    <label>B Appli Model Id</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>