hubSide/force-app/main/default/objects/Product2/fields/Canal_distributeur__c.field-meta.xml
<CustomField>
    <fullName>Canal_distributeur__c</fullName>
    <label>Canal distributeur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FNAC</fullName>
            </value>
            <value>
                <fullName>DARTY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>