hubSide/force-app/main/default/objects/Product2/fields/Caution__c.field-meta.xml
<CustomField>
    <fullName>Caution__c</fullName>
    <label>Caution</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>