hubSide/force-app/main/default/objects/Product2/fields/Code_cegid__c.field-meta.xml
<CustomField>
    <fullName>Code_cegid__c</fullName>
    <label>Code cegid</label>
    <length>25</length>
    <type>Text</type>
</CustomField>