hubSide/force-app/main/default/objects/Product2/fields/Code_formule__c.field-meta.xml
<CustomField>
    <fullName>Code_formule__c</fullName>
    <description>Code offre Salesforce</description>
    <displayFormat>SFID-FS{000}</displayFormat>
    <label>Code formule</label>
    <type>AutoNumber</type>
</CustomField>