hubSide/force-app/main/default/objects/Product2/fields/Description_longue__c.field-meta.xml
<CustomField>
    <fullName>Description_longue__c</fullName>
    <label>Description détaillée</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>