hubSide/force-app/main/default/objects/Product2/fields/Disponibilite_stock__c.field-meta.xml
<CustomField>
    <fullName>Disponibilite_stock__c</fullName>
    <defaultValue>&apos;Votre produit n\&apos;est pas disponible actuellement.&apos;</defaultValue>
    <description>Affiche la disponibilité des stocks du produit en question.</description>
    <label>Disponibilité stock</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>