hubSide/force-app/main/default/objects/Product2/fields/Duree_d_engagement__c.field-meta.xml
<CustomField>
    <fullName>Duree_d_engagement__c</fullName>
    <label>Duree d&apos;engagement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>