hubSide/force-app/main/default/objects/Product2/fields/Duree_formule_mois__c.field-meta.xml
<CustomField>
    <fullName>Duree_formule_mois__c</fullName>
    <description>Durée de la formule créée en nombre de mois (nécessaire lors de la création du contrat)</description>
    <label>Durée de la formule (mois)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>