hubSide/force-app/main/default/objects/Product2/fields/eanBarcode__c.field-meta.xml
<CustomField>
    <fullName>eanBarcode__c</fullName>
    <description>EAN barcode of the item catalog which includes some items (P27452576K) not following the EAN 13 standard</description>
    <label>Code-barres EAN (gencode)</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>