hubSide/force-app/main/default/objects/Product2/fields/Famille_produit__c.field-meta.xml
<CustomField>
    <fullName>Famille_produit__c</fullName>
    <label>Famille produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Famille_Produit</valueSetName>
    </valueSet>
</CustomField>