hubSide/force-app/main/default/objects/Product2/fields/Formule_location__c.field-meta.xml
<CustomField>
    <fullName>Formule_location__c</fullName>
    <description>Miroir nom du produit</description>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formule location</label>
    <type>Text</type>
</CustomField>