hubSide/force-app/main/default/objects/Product2/fields/FranchiseAmount1__c.field-meta.xml
<CustomField>
    <fullName>FranchiseAmount1__c</fullName>
    <label>Franchise Amount Level 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>