hubSide/force-app/main/default/objects/Product2/fields/FranchiseAmount2__c.field-meta.xml
<CustomField>
    <fullName>FranchiseAmount2__c</fullName>
    <label>Franchise Amount Level 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>