hubSide/force-app/main/default/objects/Product2/fields/FranchiseAmount3__c.field-meta.xml
<CustomField>
    <fullName>FranchiseAmount3__c</fullName>
    <label>Franchise Amount Level 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>