hubSide/force-app/main/default/objects/Product2/fields/FranchiseLevel1__c.field-meta.xml
<CustomField>
    <fullName>FranchiseLevel1__c</fullName>
    <label>Franchise Level 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>