hubSide/force-app/main/default/objects/Product2/fields/FranchiseLevel2__c.field-meta.xml
<CustomField>
    <fullName>FranchiseLevel2__c</fullName>
    <label>Franchise Level 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>