hubSide/force-app/main/default/objects/Product2/fields/FranchiseLevel3__c.field-meta.xml
<CustomField>
    <fullName>FranchiseLevel3__c</fullName>
    <label>Franchise Level 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>