hubSide/force-app/main/default/objects/Product2/fields/Gamme_formule__c.field-meta.xml
<CustomField>
    <fullName>Gamme_formule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gamme offre</description>
    <label>Gamme formule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Gamme__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Gamme formule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Gamme__c</referenceTo>
    <relationshipLabel>Offres location</relationshipLabel>
    <relationshipName>Products_offre</relationshipName>
    <type>Lookup</type>
</CustomField>