hubSide/force-app/main/default/objects/Product2/fields/Gamme_produit__c.field-meta.xml
<CustomField>
    <fullName>Gamme_produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gamme produit</description>
    <label>Gamme produit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Gamme__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Gamme produit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Gamme__c</referenceTo>
    <relationshipLabel>Produits location</relationshipLabel>
    <relationshipName>Products_produit</relationshipName>
    <type>Lookup</type>
</CustomField>