hubSide/force-app/main/default/objects/Product2/fields/IsInsurance__c.field-meta.xml
<CustomField>
    <fullName>IsInsurance__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicated if the item catalog is for Insurance</description>
    <label>Assurance</label>
    <type>Checkbox</type>
</CustomField>