hubSide/force-app/main/default/objects/Product2/fields/IsRental__c.field-meta.xml
<CustomField>
    <fullName>IsRental__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the itme catalog is for Rental</description>
    <label>Location</label>
    <type>Checkbox</type>
</CustomField>