hubSide/force-app/main/default/objects/Product2/fields/itemCategory__c.field-meta.xml
<CustomField>
    <fullName>itemCategory__c</fullName>
    <description>List of every category of an item catalog via the GlobalValueSet</description>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>itemCategory</valueSetName>
    </valueSet>
</CustomField>