hubSide/force-app/main/default/objects/Product2/fields/itemSubCategory__c.field-meta.xml
<CustomField>
    <fullName>itemSubCategory__c</fullName>
    <label>Sous catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACCESSOIRE PC</fullName>
            </value>
            <value>
                <fullName>ACCESSOIRE TV</fullName>
            </value>
            <value>
                <fullName>AMPOULE CONNECTEE</fullName>
            </value>
            <value>
                <fullName>APPAREIL PHOTO</fullName>
            </value>
            <value>
                <fullName>BATTERIE DE SECOURS</fullName>
            </value>
            <value>
                <fullName>BOITIER DE DESINFECTION</fullName>
            </value>
            <value>
                <fullName>BRACELET CONNECTE</fullName>
            </value>
            <value>
                <fullName>CAMERA DE SURVEILLANCE</fullName>
            </value>
            <value>
                <fullName>CAMERA SPORTIVE</fullName>
            </value>
            <value>
                <fullName>CARTE MEMOIRE</fullName>
            </value>
            <value>
                <fullName>CASQUE</fullName>
            </value>
            <value>
                <fullName>CASQUE VR</fullName>
            </value>
            <value>
                <fullName>CHARGE INDUCTION</fullName>
            </value>
            <value>
                <fullName>CONSOLE DE JEUX</fullName>
            </value>
            <value>
                <fullName>COQUE</fullName>
            </value>
            <value>
                <fullName>DETECTEUR DE FUMEE</fullName>
            </value>
            <value>
                <fullName>DISQUE DUR</fullName>
            </value>
            <value>
                <fullName>DRONE</fullName>
            </value>
            <value>
                <fullName>ECOUTEURS</fullName>
            </value>
            <value>
                <fullName>ECOUTEURS SANS FIL</fullName>
            </value>
            <value>
                <fullName>ENCEINTE</fullName>
            </value>
            <value>
                <fullName>ENERGIE</fullName>
            </value>
            <value>
                <fullName>ETUIS</fullName>
            </value>
            <value>
                <fullName>ETUIS CB</fullName>
            </value>
            <value>
                <fullName>GYROPODE</fullName>
            </value>
            <value>
                <fullName>HOVERBOARD</fullName>
            </value>
            <value>
                <fullName>JEUX VIDEO</fullName>
            </value>
            <value>
                <fullName>KARTING</fullName>
            </value>
            <value>
                <fullName>LAMPE CONNECTE</fullName>
            </value>
            <value>
                <fullName>LCD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>