hubSide/force-app/main/default/objects/Product2/fields/Livraison_a_domicile__c.field-meta.xml
<CustomField>
    <fullName>Livraison_a_domicile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Livraison à domicile</label>
    <type>Checkbox</type>
</CustomField>