hubSide/force-app/main/default/objects/Product2/fields/Marque__c.field-meta.xml
<CustomField>
    <fullName>Marque__c</fullName>
    <label>Marque</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Famille_produit__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Marque_produit</valueSetName>
    </valueSet>
</CustomField>