hubSide/force-app/main/default/objects/Product2/fields/MatriceId__c.field-meta.xml
<CustomField>
    <fullName>MatriceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1 ItemCatalog is link to only 1 Matrice cout equipement record</description>
    <label>Matrice coût equipement</label>
    <referenceTo>Matrice_cout_equipement__c</referenceTo>
    <relationshipLabel>Catalogue équipement</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>