hubSide/force-app/main/default/objects/Product2/fields/modelCode__c.field-meta.xml
<CustomField>
    <fullName>modelCode__c</fullName>
    <label>Code modèle</label>
    <length>10</length>
    <type>Text</type>
</CustomField>