hubSide/force-app/main/default/objects/Product2/fields/NbMounthKPIContract__c.field-meta.xml
<CustomField>
    <fullName>NbMounthKPIContract__c</fullName>
    <label>Nb mois pour les indicateurs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>