hubSide/force-app/main/default/objects/Product2/fields/Nombre_jours_carence__c.field-meta.xml
<CustomField>
    <fullName>Nombre_jours_carence__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nombre de jours de carence autorisépar emprunt.</description>
    <label>Nombre de jours de carence (par emprunt)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>