hubSide/force-app/main/default/objects/Product2/fields/Nombre_jours_inclus__c.field-meta.xml
<CustomField>
    <fullName>Nombre_jours_inclus__c</fullName>
    <description>Nombre de jours inclus dans l&apos;offre</description>
    <label>Nombre de jours inclus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>