hubSide/force-app/main/default/objects/Product2/fields/PartnerVoucher__c.field-meta.xml
<CustomField>
    <fullName>PartnerVoucher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the product is a partner vouher (SFAMI-2160)</description>
    <label>Voucher Partenaire</label>
    <type>Checkbox</type>
</CustomField>