hubSide/force-app/main/default/objects/Product2/fields/Perte__c.field-meta.xml
<CustomField>
    <fullName>Perte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perte</label>
    <type>Checkbox</type>
</CustomField>