hubSide/force-app/main/default/objects/Product2/fields/Pertes_valeur_achat__c.field-meta.xml
<CustomField>
    <fullName>Pertes_valeur_achat__c</fullName>
    <label>Pertes valeur achat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>