hubSide/force-app/main/default/objects/Product2/fields/Pilote__c.field-meta.xml
<CustomField>
    <fullName>Pilote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pilote</label>
    <type>Checkbox</type>
</CustomField>