hubSide/force-app/main/default/objects/Product2/fields/Plafond__c.field-meta.xml
<CustomField>
    <fullName>Plafond__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Montant du plafond de dédommagement</inlineHelpText>
    <label>Plafond</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>