hubSide/force-app/main/default/objects/Product2/fields/Prix_indicatif__c.field-meta.xml
<CustomField>
    <fullName>Prix_indicatif__c</fullName>
    <label>Prix indicatif</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>