hubSide/force-app/main/default/objects/Product2/fields/Prix_mensuel__c.field-meta.xml
<CustomField>
    <fullName>Prix_mensuel__c</fullName>
    <description>Prix de l&apos;abonnement mensuel</description>
    <label>Prix mensuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>