hubSide/force-app/main/default/objects/Product2/fields/Produit_avec_numero_de_serie__c.field-meta.xml
<CustomField>
    <fullName>Produit_avec_numero_de_serie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Produit avec numéro de série ?</label>
    <type>Checkbox</type>
</CustomField>