hubSide/force-app/main/default/objects/Product2/fields/Reparation__c.field-meta.xml
<CustomField>
    <fullName>Reparation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Réparation</label>
    <type>Checkbox</type>
</CustomField>