hubSide/force-app/main/default/objects/Product2/fields/Report_maximum__c.field-meta.xml
<CustomField>
    <fullName>Report_maximum__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nombre de jours pouvant être reportés d&apos;une période à une autre.</description>
    <label>Report maximum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>