hubSide/force-app/main/default/objects/Product2/fields/Tarif_depassement__c.field-meta.xml
<CustomField>
    <fullName>Tarif_depassement__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Prix journalier d&apos;un dépassement du nombre de jours inclus dans l&apos;offre</description>
    <label>Tarif dépassement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>