hubSide/force-app/main/default/objects/Product2/fields/Tout_risques__c.field-meta.xml
<CustomField>
    <fullName>Tout_risques__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tous risques</label>
    <type>Checkbox</type>
</CustomField>