hubSide/force-app/main/default/objects/Product2/fields/Type_produit__c.field-meta.xml
<CustomField>
    <fullName>Type_produit__c</fullName>
    <label>Type de produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_produit</valueSetName>
    </valueSet>
</CustomField>