hubSide/force-app/main/default/objects/Product2/fields/vlocity_ins__ParentClassId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ParentClassId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Class</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subclasses</relationshipLabel>
    <relationshipName>Subclasses</relationshipName>
    <type>Lookup</type>
</CustomField>