hubSide/force-app/main/default/objects/Product2/recordTypes/Assurance.recordType-meta.xml
<RecordType>
    <fullName>Assurance</fullName>
    <active>true</active>
    <label>Catalogue Assurance</label>
</RecordType>