hubSide/force-app/main/default/objects/Product2/recordTypes/Formule_location.recordType-meta.xml
<RecordType>
    <fullName>Formule_location</fullName>
    <active>true</active>
    <description>Lié à la formule de location</description>
    <label>Formule location</label>
</RecordType>