hubSide/force-app/main/default/objects/Product2/recordTypes/Hubside.recordType-meta.xml
<RecordType>
    <fullName>Hubside</fullName>
    <active>true</active>
    <label>Hubside</label>
</RecordType>