hubSide/force-app/main/default/objects/Product2/recordTypes/itemCatalog.recordType-meta.xml
<RecordType>
    <fullName>itemCatalog</fullName>
    <active>true</active>
    <description>Liste le catalogue des équipements</description>
    <label>Catalogue Equipement</label>
</RecordType>