hubSide/force-app/main/default/objects/Product2/recordTypes/Prestation_de_service.recordType-meta.xml
<RecordType>
    <fullName>Prestation_de_service</fullName>
    <active>true</active>
    <label>Prestation de service</label>
</RecordType>