hubSide/force-app/main/default/objects/Product2/recordTypes/Produit_location.recordType-meta.xml
<RecordType>
    <fullName>Produit_location</fullName>
    <active>true</active>
    <label>Produit location</label>
</RecordType>