hubSide/force-app/main/default/objects/Product2/recordTypes/vlocity_ins__ClaimInjurySpec.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__ClaimInjurySpec</fullName>
    <active>true</active>
    <label>Claim Injury Spec</label>
</RecordType>