hubSide/force-app/main/default/objects/Product2/recordTypes/vlocity_ins__Class.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Class</fullName>
    <active>true</active>
    <label>Class</label>
</RecordType>