hubSide/force-app/main/default/objects/Product2/recordTypes/vlocity_ins__InsuredPartySpec.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__InsuredPartySpec</fullName>
    <active>true</active>
    <label>Insured Party Spec</label>
</RecordType>