hubSide/force-app/main/default/objects/Product2/recordTypes/vlocity_ins__ProductTemplate.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__ProductTemplate</fullName>
    <active>true</active>
    <label>Product Template</label>
</RecordType>