hubSide/force-app/main/default/objects/Product2/recordTypes/vlocity_ins__RatingFactSpec.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__RatingFactSpec</fullName>
    <active>true</active>
    <label>Rating Fact Spec</label>
</RecordType>