hubSide/force-app/main/default/objects/Product2/validationRules/Champs_obligatoires_produit_location.validationRule-meta.xml
<ValidationRule>
    <fullName>Champs_obligatoires_produit_location</fullName>
    <active>true</active>
    <description>Le prix indicatif  est un champ obligatoire pour le record type Produit location</description>
    <errorConditionFormula>AND(
    OR(
        $RecordType.Name = &apos;Nouveau produit location&apos;,
        $RecordType.Name = &apos;Produit location&apos;
    ),
    ISBLANK(Prix_indicatif__c)
    
)</errorConditionFormula>
    <errorMessage>Merci de bien vouloir renseigner le prix indicatif du produit.</errorMessage>
</ValidationRule>